--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entre2</title>
+    <title>Entre 2, Hecho por manos mexicanas</title>
+    
+    <!-- Open Graph Meta Tags for Facebook, WhatsApp, Instagram -->
+    <meta property="og:title" content="Entre2. - Hecho por manos mexicanas">
+    <meta property="og:description" content="Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
+    <meta property="og:image" content="https://pepe-chuy.github.io/Entre2/images/logo.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://pepe-chuy.github.io/Entre2/">
+    <meta property="og:type" content="website">
+    
+    <!-- TikTok uses Open Graph tags as well -->
+    <meta name="description" content="Entre2. Hecho por manos mexicanas - Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
     <style>
         /* Custom Font Declaration */
         @font-face {
