--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entre 2, Hecho por manos mexicanas</title>
+    <title>Fashion Store</title>
     
     <!-- Open Graph Meta Tags for Facebook, WhatsApp, Instagram -->
-    <meta property="og:title" content="Entre2. - Hecho por manos mexicanas">
-    <meta property="og:description" content="Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
-    <meta property="og:image" content="https://pepe-chuy.github.io/Entre2/images/logo.jpg">
+    <meta property="og:title" content="Entre2. - Fashion Store">
+    <meta property="og:description" content="Discover our latest collection of stylish clothing. Shop bodies, skirts, dresses and more with beautiful color options.">
+    <meta property="og:image" content="https://yourdomain.com/images/social-preview.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://pepe-chuy.github.io/Entre2/">
+    <meta property="og:url" content="https://yourdomain.com">
     <meta property="og:type" content="website">
     
     <!-- TikTok uses Open Graph tags as well -->
-    <meta name="description" content="Entre2. Hecho por manos mexicanas - Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
+    <meta name="description" content="Entre2. Fashion Store - Discover our latest collection of stylish clothing with beautiful color options and gradients.">
     <style>
         /* Custom Font Declaration */
         @font-face {
@@ -39,7 +39,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background-color: #e7dac7;
-            padding-top: 70px;
+            padding-top: 80px;
         }
 
         /* Fixed Top Navigation */
@@ -49,7 +49,7 @@
             left: 0;
             right: 0;
             background: #70575a;
-            height: 60px;
+            height: 70px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -57,12 +57,24 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
-        .logo {
+        .logo-container {
+            text-align: center;
             color: white;
+        }
+
+        .logo {
             font-size: 24px;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
+            margin-bottom: 2px;
+        }
+
+        .tagline {
+            font-size: 10px;
+            font-weight: 300;
+            letter-spacing: 1px;
+            opacity: 0.8;
         }
 
         /* Product Grid */
@@ -204,7 +216,10 @@
 <body>
     <!-- Fixed Navigation Bar -->
     <nav class="navbar">
-        <div class="logo">Entre2.</div>
+        <div class="logo-container">
+            <div class="logo">Entre2.</div>
+            <div class="tagline">Hecho por manos mexicanas</div>
+        </div>
     </nav>
 
     <!-- Main Content -->
