--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Fashion Store</title>
     
     <!-- Open Graph Meta Tags for Facebook, WhatsApp, Instagram -->
-    <meta property="og:title" content="Entre2. - Fashion Store">
-    <meta property="og:description" content="Discover our latest collection of stylish clothing. Shop bodies, skirts, dresses and more with beautiful color options.">
-    <meta property="og:image" content="https://yourdomain.com/images/social-preview.jpg">
+    <meta property="og:title" content="Entre2. - Hecho por manos mexicanas">
+    <meta property="og:description" content="Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
+    <meta property="og:image" content="https://pepe-chuy.github.io/Entre2/images/logo.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:url" content="https://pepe-chuy.github.io/Entre2/">
     <meta property="og:type" content="website">
     
     <!-- TikTok uses Open Graph tags as well -->
-    <meta name="description" content="Entre2. Fashion Store - Discover our latest collection of stylish clothing with beautiful color options and gradients.">
+    <meta name="description" content="Entre2. Hecho por manos mexicanas - Descubre nuestra gran variedad de prendas, lindas y 100% mexicanas">
     <style>
         /* Custom Font Declaration */
         @font-face {
