--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
             font-size: 17px;
             font-weight: 700;
             color: #667eea;
+            margin-bottom: 8px;
+            font-family: 'Rische-Light', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            letter-spacing: 0.3px;
         }
 
         /* Color Swatches */
