--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             justify-content: center;
             z-index: 1000;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: relative;
         }
 
         .logo-container {
@@ -75,6 +76,30 @@
             font-weight: 300;
             letter-spacing: 1px;
             opacity: 0.8;
+        }
+
+        /* Instagram Icon */
+        .instagram-icon {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 32px;
+            height: 32px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            opacity: 0.9;
+        }
+
+        .instagram-icon:hover {
+            opacity: 1;
+            transform: translateY(-50%) scale(1.1);
+        }
+
+        .instagram-icon svg {
+            width: 100%;
+            height: 100%;
+            fill: white;
         }
 
         /* Product Grid */
@@ -231,6 +256,11 @@
 <body>
     <!-- Fixed Navigation Bar -->
     <nav class="navbar">
+        <a href="#" class="instagram-icon" onclick="openInstagram()">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+            </svg>
+        </a>
         <div class="logo-container">
             <div class="logo">Entre2.</div>
             <div class="tagline">Hecho por manos mexicanas</div>
@@ -411,6 +441,12 @@
         document.addEventListener('DOMContentLoaded', () => {
             new ClothesShop();
         });
+
+        // Instagram link function
+        function openInstagram() {
+            // Replace with your actual Instagram URL
+            window.open('https://www.instagram.com/anafer_01/', '_blank');
+        }
     </script>
 </body>
 </html>
