--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background-color: #e7dac7;
-            padding-top: 80px;
         }
 
         /* Fixed Top Navigation */
@@ -104,7 +103,7 @@
 
         /* Product Grid */
         .container {
-            padding: 20px 15px;
+            padding: 90px 15px 20px;
             max-width: 600px;
             margin: 0 auto;
         }
@@ -225,7 +224,7 @@
         /* Responsive adjustments */
         @media (max-width: 480px) {
             .container {
-                padding: 15px 10px;
+                padding: 85px 10px 15px;
             }
             
             .products-grid {
