--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background-color: #e7dac7;
+            background-color: #70575a;
         }
 
         /* Fixed Top Navigation */
@@ -106,6 +106,8 @@
             padding: 90px 15px 20px;
             max-width: 600px;
             margin: 0 auto;
+            background-color: #e7dac7;
+            min-height: calc(100vh - 70px);
         }
 
         .products-grid {
